--- a/setup.cfg
+++ b/setup.cfg
@@ -22,5 +22,7 @@ test = pytest
 # Define setup.py command aliases here
 
 [tool:pytest]
-addopts = --verbose
+#addopts = --verbose --capture=no --exitfirst
+# addopts = --verbose --exitfirst
+addopts = --verbose --capture=no
 python_files = tests/*/Test*.py
