--- a/setup.cfg
+++ b/setup.cfg
@@ -24,5 +24,5 @@ test = pytest
 [tool:pytest]
 #addopts = --verbose --capture=no --exitfirst
 # addopts = --verbose --exitfirst
-addopts = --verbose --capture=no
+#addopts = --verbose --capture=no
 python_files = tests/*/Test*.py
