--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ python =
 [testenv:flake8]
 basepython=python
 deps=flake8
-commands=flake8 totaldepth
+commands=flake8 TotalDepth
 
 [testenv]
 setenv =
