--- a/.gitignore
+++ b/.gitignore
@@ -62,5 +62,5 @@ TotalDepth.egg-info/
 htmlcov/
 
 # The contents is created when testing and have data that is randomly generated.
-tests/unit/test_util/test_plot/
+tests/unit/test_util/test_plot/test_svg/*
 
