--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ htmlcov/
 # The contents is created when testing and have data that is randomly generated.
 tests/unit/test_util/test_plot/test_svg/*
 
+# Temporary
+images/
+
+
