--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,5 +7,6 @@ include README.rst
 recursive-include tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
+recursive-include src *.pyx
 
 recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
