Exclude data/ directory.

--- a/.gitignore
+++ b/.gitignore
@@ -74,4 +74,7 @@ gitignore/
 tests/integration/test_LIS/test_core/binary_files
 benchmarks/TotalDepth/LIS/core/binary_files/
 
+# Binary test data
+data/
+
 
