Fix test environment. Some RP66V1 tests failing.

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,4 +25,4 @@ test = pytest
 #addopts = --verbose --capture=no --exitfirst
 # addopts = --verbose --exitfirst
 #addopts = --verbose --capture=no
-python_files = tests/*/Test*.py
+python_files = tests/*
