Start of 0.3.1rc0

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ TotalDepth.egg-info/
 # Coverage artifacts
 .coverage
 .coverage.*
+.coverage*
 htmlcov/
 
 # The contents is created when testing and have data that is randomly generated.
