--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ benchmarks/TotalDepth/LIS/core/binary_files/
 
 # Binary test data
 data/
+!src/TotalDepth/common/data/
 
 # Binary Pickle files
 *.pkl
