--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,33 +1,3 @@
-alabaster==0.7.12
-Babel==2.7.0
-bleach==3.1.0
-certifi==2019.11.28
-chardet==3.0.4
-coverage==5.0.1
-docutils==0.15.2
-flake8==3.7.9
-idna==2.8
-imagesize==1.2.0
-Jinja2==2.10.3
-keyring==21.0.0
-MarkupSafe==1.1.1
-pkginfo==1.5.0.1
-Pygments==2.5.2
-pytest-cov==2.8.1
-pytz==2019.3
-readme-renderer==24.0
-requests==2.22.0
-requests-toolbelt==0.9.1
-snowballstemmer==2.0.0
-Sphinx==2.3.1
-sphinxcontrib-applehelp==1.0.1
-sphinxcontrib-devhelp==1.0.1
-sphinxcontrib-htmlhelp==1.0.2
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.2
-sphinxcontrib-serializinghtml==1.1.3
-tox==3.14.3
-tqdm==4.41.0
-twine==3.1.1
-urllib3==1.25.7
-webencodings==0.5.1
+-r requirements.txt
+Sphinx==4.1.2
+pytest-cov==2.12.1
