--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,21 @@
-attrs==19.3.0
-colorama==0.4.3
-Cython==0.29.14
-importlib-metadata==1.3.0
-lxml==4.4.2
-more-itertools==8.0.2
-numpy==1.18.0
-packaging==19.2
-Pillow==8.0.1
-pluggy==0.13.1
-psutil==5.6.7
-py==1.8.1
-pyparsing==2.4.6
-pytest==5.3.2
-six==1.13.0
-wcwidth==0.1.7
-wheel==0.35.1
-zipp==0.6.0
-
-beautifulsoup4~=4.9.1
-requests~=2.22.0
-setuptools==50.3.2
-PyYAML~=5.3.1
+attrs==21.2.0
+beautifulsoup4==4.9.3
+certifi==2021.5.30
+charset-normalizer==2.0.4
+colorama==0.4.4
+Cython==0.29.24
+idna==3.2
+iniconfig==1.1.1
+lxml==4.6.3
+numpy==1.21.2
+packaging==21.0
+Pillow==8.3.2
+pluggy==1.0.0
+psutil==5.8.0
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.5
+requests==2.26.0
+soupsieve==2.2.1
+toml==0.10.2
+urllib3==1.26.6
